--- a/templates/page_not_found.html
+++ b/templates/page_not_found.html
@@ -2,4 +2,4 @@
 
 <p> We could not find what you are looking for. Please visit our homepage</p>
 
-<p><a href = {{ url_for('Home') }}> Home </a></p>
+<p><a href = "#{{ url_for('Home') }}"> Home </a></p>
